<resources>
    <string name="app_name">Syzygy Events</string>
    
    <string name="title_entrant_profile">My Profile</string>
    <string name="title_entrant_events">My Events</string>
    <string name="title_entrant_qr">QR Scan</string>
    <string name="title_entrant_notifications">Notifications</string>

    <string name="title_entrant_sec_event">Event Info</string>
    <string name="title_entrant_sec_facility">Facility Info</string>
    <string name="title_entrant_sec_edit">Edit Profile</string>

    <string name="title_organizer_profile">My Facility</string>
    <string name="title_organizer_events">My Events</string>
    <string name="title_organizer_create">New Event</string>

    <string name="title_organizer_sec_event">Event</string>
    <string name="title_organizer_sec_edit">Edit Facility</string>

    <string name="title_admin_profiles">Browse Users</string>
    <string name="title_admin_events">Browse Events</string>
    <string name="title_admin_images">Browse Images</string>

    <string name="title_admin_sec_event">Event</string>
    <string name="title_admin_sec_facility">Facility</string>
    <string name="title_admin_sec_user">User</string>

    <string name="title_signup_organizer">Create Facility</string>

    <string name="lottery_enrolled_count">Enrolled: %d</string>
    <string name="lottery_invited_count">Invited: %d</string>
    <string name="lottery_waitlist_count">Waitlist: %d</string>
    <string name="lottery_open_count">Open: %d</string>
    <string name="lottery_capacity">Capacity: %d</string>


    <string name="add_image_button">Add Photo</string>
    <string name="change_image_button">Change Photo</string>
    <string name="remove_image_button">Remove</string>
    <string name="add_poster_button">Add Poster</string>
    <string name="change_poster_button">Change Poster</string>
    <string name="opt_in_admin_notifications_checkbox">Allow Notifications From Admin</string>
    <string name="opt_in_organizer_notifications_checkbox">Allow Notifications From Organizers</string>


    <string name="acc_title_entrant">My Account</string>
    <string name="add_acc_title_organizer">Create Facility</string>
    <string name="acc_title_organizer">Facility</string>
    <string name="acc_title_admin">Admin</string>
    <string name="text_waitlist_chip">Waitlist</string>
    <string name="text_invited_chip">Invited</string>
    <string name="text_enrolled_chip">Enrolled</string>
    <string name="text_waitlist_full">Waitlist is Full</string>
    <string name="button_accept_invite">Accept</string>
    <string name="button_reject_invite">Reject</string>
    <string name="button_leave_waitlist">Exit Waitlist</string>
    <string name="button_join_waitlist">Join Waitlist</string>
    <string name="text_requires_geolocation">Requires Geolocation</string>
    <string name="button_run_lottery">Fill Spots</string>
    <string name="button_download_qr_image">download qr</string>
    <string name="button_copy_qr_hash">copy hash</string>
    <string name="button_scan_qr">Scan QR</string>

    <string name="weekdays_time">%s  at  %s</string>

    <string name="before_reg_text">Registration Opens %s</string>
    <string name="reg_open_text">Registration Open Until %s</string>
    <string name="after_reg_text">Registration Closed</string>

    <string name="failed_get_location">Failed to get location. You cannot join this waitlist without sharing your current location.</string>

    <string name="date_format_basic">"dd/MM/yyyy"</string>
    <string name="edit_facility_button">Edit Facility</string>
    <string name="edit_facility_name_hint">Facility Name*</string>
    <string name="edit_facility_description_hint">Description</string>
    <string name="edit_facility_description_placeholder">Add additional info about your facility!</string>
    <string name="create_facility_submit_button">Create Facility</string>
    <string name="requires_geo_warning">To join the waitlist for this event you must agree to share your join location with the event organizer.</string>
    <string name="failed_scan_qr">QR scan unsuccessful.</string>
    <string name="button_open_lottery">Lottery</string>
    <string name="lottery_info_text">This will fill each open spot with a random selection from the waitlist. Each selected entrant will be sent an invitation to enroll.</string>
    <string name="run_lottery_button">Fill Open Spots</string>


</resources>