<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/entrant_mobile_nav"
    app:startDestination="@+id/nav_entrant_profile">

    <fragment
        android:id="@+id/nav_entrant_profile"
        android:name="com.syzygy.events.ui.entrant.EntrantProfileFragment"
        android:label="@string/title_entrant_profile"
        tools:layout="@layout/frag_entrant_profile" />

    <fragment
        android:id="@+id/nav_entrant_events"
        android:name="com.syzygy.events.ui.entrant.EntrantEventsFragment"
        android:label="@string/title_entrant_events"
        tools:layout="@layout/frag_entrant_events_list" />

    <fragment
        android:id="@+id/nav_entrant_qr"
        android:name="com.syzygy.events.ui.entrant.EntrantQrFragment"
        android:label="@string/title_entrant_qr"
        tools:layout="@layout/frag_entrant_qr" />

    <fragment
        android:id="@+id/nav_entrant_notifications"
        android:name="com.syzygy.events.ui.entrant.EntrantNotificationsFragment"
        android:label="@string/title_entrant_notifications"
        tools:layout="@layout/frag_entrant_notifications_list" />


    <fragment
        android:id="@+id/nav_entrant_event_secondary"
        android:name="com.syzygy.events.ui.entrant.EntrantEventPageFragment"
        android:label="@string/title_entrant_sec_event"
        tools:layout="@layout/frag_entrant_event_page" />

    <fragment
        android:id="@+id/nav_entrant_facility_secondary"
        android:name="com.syzygy.events.ui.entrant.EntrantFacilityPageFragment"
        android:label="@string/title_entrant_sec_facility"
        tools:layout="@layout/frag_entrant_facility_page" />

    <fragment
        android:id="@+id/nav_entrant_edit_secondary"
        android:name="com.syzygy.events.ui.entrant.EntrantEditProfileFragment"
        android:label="@string/title_entrant_sec_edit"
        tools:layout="@layout/frag_entrant_edit_profile" />

    <fragment
        android:id="@+id/nav_signup_facility_secondary"
        android:name="com.syzygy.events.ui.signup.SignupFacilitySecondaryFragment"
        android:label="@string/title_signup_organizer"
        tools:layout="@layout/frag_signup_organizer" />


</navigation>