<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_entrant_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_entrant_notifications" />

    <item
        android:id="@+id/nav_entrant_qr"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_entrant_qr" />

    <item
        android:id="@+id/nav_entrant_events"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_entrant_events" />

    <item
        android:id="@+id/nav_entrant_profile"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_entrant_profile" />

</menu>