<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/organizer_mobile_nav"
    app:startDestination="@+id/nav_organizer_profile">

    <fragment
        android:id="@+id/nav_organizer_profile"
        android:name="com.syzygy.events.ui.organizer.OrganizerFacilityFragment"
        android:label="@string/title_organizer_profile"
        tools:layout="@layout/frag_org_facility_profile" />

    <fragment
        android:id="@+id/nav_organizer_events"
        android:name="com.syzygy.events.ui.organizer.OrganizerEventsFragment"
        android:label="@string/title_organizer_events"
        tools:layout="@layout/frag_org_events_list" />

    <fragment
        android:id="@+id/nav_organizer_create"
        android:name="com.syzygy.events.ui.organizer.OrganizerCreateEventFragment"
        android:label="@string/title_organizer_create"
        tools:layout="@layout/frag_org_create_event" />

    <fragment
        android:id="@+id/nav_organizer_event_secondary"
        android:name="com.syzygy.events.ui.organizer.OrganizerEventFragment"
        android:label="@string/title_organizer_sec_event"
        tools:layout="@layout/frag_org_event_page" />

    <fragment
        android:id="@+id/nav_organizer_edit_secondary"
        android:name="com.syzygy.events.ui.organizer.OrganizerEditFacilityFragment"
        android:label="@string/title_organizer_sec_edit"
        tools:layout="@layout/frag_org_edit_facility" />

</navigation>