<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/admin_mobile_nav"
    app:startDestination="@+id/nav_admin_profiles">

    <fragment
        android:id="@+id/nav_admin_profiles"
        android:name="com.syzygy.events.ui.admin.AdminProfilesFragment"
        android:label="@string/title_admin_profiles"
        tools:layout="@layout/fragment_admin_profiles" />

    <fragment
        android:id="@+id/nav_admin_events"
        android:name="com.syzygy.events.ui.admin.AdminEventsFragment"
        android:label="@string/title_admin_events"
        tools:layout="@layout/fragment_admin_events" />

    <fragment
        android:id="@+id/nav_admin_images"
        android:name="com.syzygy.events.ui.admin.AdminImagesFragment"
        android:label="@string/title_admin_images"
        tools:layout="@layout/fragment_admin_images" />

</navigation>