<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="?attr/actionBarSize">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:hint="@string/edit_facility_name_hint"
        app:expandedHintEnabled="false"
        app:layout_constraintStart_toEndOf="@+id/facility_image"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_facility_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="top|start"
            android:inputType="text|textMultiLine"
            android:lines="2"
            android:maxLength="30"
            android:scrollbars="vertical"
            android:textAlignment="gravity"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/facility_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/edit_facility_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="380dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_facility_remove_image"
        app:mapType="terrain"
        app:uiZoomControls="true"
        app:uiZoomGestures="true" />

    <View
        android:id="@+id/div"
        android:layout_width="400dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_facility_map" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/edit_facility_description_layout"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/edit_facility_description_hint"
        app:expandedHintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/div"
        app:placeholderText="@string/edit_facility_description_placeholder">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_facility_description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:inputType="text|textLongMessage|textAutoCorrect|textCapSentences|textMultiLine"
            android:lines="7"
            android:maxLength="300"
            android:scrollbars="vertical"
            android:textAlignment="gravity" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/edit_facility_button_submit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Save Changes"
        app:layout_constraintTop_toBottomOf="@+id/edit_facility_description_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/edit_facility_button_cancel"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="Cancel"
        app:layout_constraintTop_toBottomOf="@+id/edit_facility_button_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.4"
        android:background="#000000"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />
    </FrameLayout>

    <Button
        android:id="@+id/edit_facility_edit_image"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facility_image" />

    <Button
        android:id="@+id/edit_facility_remove_image"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:text="@string/remove_image_button"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_facility_edit_image" />


</androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>
